
package hootfs.head

// For now file and directory IDs will be UUIDs.
// Generic ReponseStatus message to be included in 
// all responses. (Should be first field of all reponses.)

message ResponseStatus {
    enum StatusCode {
        SUCCESS = 0;
        WARNING = 1;
        FAILURE = 2;  
    }

    optional StatusCode code = 1;
    optional string res_message = 2;
}

// UUID message structure
message UUID {
    optional bytes value = 1;
}

// ------------ GetDiirectoryContents Messages -----------------

message GetDirectoryContentsRequest {
    optional string api_key = 1;

    // The directory to get the contents of.
    // If not provided, HOME will be used.
    optional UUID dir_id = 2;
}

message ObjectInfo {
    enum ObjectType {
        FILE = 0;
        DIRECTORY = 1;
    }

    // ID and type of the object.
    optional UUID object_id = 1;
    optional ObjectType object_type = 2;
    optional string object_name = 3;
}

message GetDirectoryContentsResponse {
    optional ResponseStatus status = 1;
    repeated ObjectInfo objects = 2;
}

// ------------ MakeDirectory Messages -----------------

message MakeDirectoryRequest {
    optional string api_key = 1;

    // This is the ID of the directory
    // the new directory will be created into.
    // If this is not provided, HOME will be used.
    optional UUID dir_id = 2;

    // This is the name of the new directory.
    optional string dir_name = 3; 
}

message MakeDirectoryResponse {
    optional ResponseStatus status = 1;
    
    // The ID of the directory created.
    optional UUID dir_id = 2;
}

// ------------ AddNewFile Messages -----------------

message AddNewFileRequest {
    optional string api_key = 1;

    // ID of directory to place folder in.
    optional UUID dir_id = 2;

    // Name of file to create.
    optional string file_name = 3;

    // Contents of file being added...
    // If not provided, an empty file
    // will be created.
    optional bytes contents = 4;
}

message AddNewFileResponse {
    optional ResponseStatus status = 1;
    
    // The ID of the file created.
    optional UUID file_id = 2;
}

// ------------ UpdateFileContents Messages -----------------

message UpdateFileContentsRequest {
    optional string api_key = 1;

    optional UUID file_id = 2;

    // The given file's contents will be
    // set to contents. 
    optional bytes contents = 3;
}

message UpdateFileContentsResponse {
    optional ResponseStatus status = 1;
    
    // Can't think of anything else to
    // put in here yet.
}

// ------------ GetFileContents Messages -----------------

message GetFileContentsRequest {
    optional string api_key = 1;
    
    // File to download.
    optional UUID file_id = 2; 
}

message GetFileContentsResponse {
    optional ResponseStatus status = 1;
    
    // Contents of file. (If found)
    optional bytes contents = 2;
}

// ------------ MoveObject Messages -----------------

message MoveObjectRequest {
    optional string api_key = 1;

    // Object to move.
    optional UUID object_id = 2; 

    // Directory to move to.
    optional UUID dir_id = 3;

    // New name of object. 
    optional string new_name = 4;
}

message MoveObjectResponse {
    optional ResponseStatus status = 1;

    // This will be the new object ID
    // Assigned to the moved object.
    // NOTE : maybe object_id won't change on move..
    // We can decide this later.
    optional UUID object_id = 2;
}

// ------------ RemoveObject Messages -----------------

message RemoveObjectRequest {
    optional string api_key = 1;

    // Object to delete.
    optional UUID object_id = 2;
}

message RemoveObjectResponse {
    optional ResponseStatus status = 1;

    // Potentially more to add later...
}

// ------------ Service definition -----------------

service HootFsService {
    rpc GetDirectoryContents(GetDiirectoryContentsRequest) 
        returns (GetDirectoryContentsResponse);
    
    rpc MakeDirectory(MakeDirectoryRequest)
        returns (MakeDirectoryResponse);

    rpc AddNewFile(AddNewFileRequest)
        returns (AddNewFileResponse);
    
    rpc UpdateFileContents(UpdateFileContentsRequest)
        returns (UpdateFileContentsResponse);    

    rpc GetFileContents(GetFileContentsRequest)
        returns (GetFileContentsResponse);    

    // Equal to rename.
    rpc MoveObject(MoveObjectRequest)
        returns (MoveObjectResponse);    

    rpc RemoveObject(RemoveObjectRequest)
        returns (RemoveObjectResponse);    
}
